[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mineflayer"
version = "0.1.0"
description = "A Python bot framework using mineflayer on the backend"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "SnarkyDeveloper", email = "snarkydeveloper@outlook.com" }
]
dependencies = [
    "javascript"
]
requires-python = ">=3.7"
keywords = ["minecraft", "bot", "mineflayer", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/snarkydeveloper/mineflayer"
Repository = "https://github.com/snarkydeveloper/mineflayer"

[tool.setuptools]
packages = ["mineflayer"]
